--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "@types/qrcode": "^1.5.5",
+    "@vueform/slider": "^2.1.10",
+    "vue": "^3.4.29",
+    "vue3-next-qrcode": "^2.0.10"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
