--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/qrcode": "^1.5.5",
     "@vueform/slider": "^2.1.10",
     "vue": "^3.4.29",
-    "vue3-next-qrcode": "^2.0.10"
+    "vue3-next-qrcode": "^2.0.10",
+    "vuetify": "^3.6.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
